correct main alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -54,12 +54,7 @@ ul {
   max-width: 1040px
   margin: auto
 }
-h2 {
-  text-align: center;
-}
-p {
-  text-align: center;
-}
+
 .student-info {
   padding: 2rem;
   max-width: 1040px;
